--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,41 @@
 </head>
 <body>
 
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li><a href="#">ホーム<span class="sr-only">(current)</span></a></li>
+        <li><a href="#">通知</a></li>
+        <li><a href="#">メッセージ</a></li>
+      </ul>
+      <button type="button" id="btn-open-tweet-modal" class="btn btn-primary navbar-btn navbar-right">ツイート</button>
+      <ul class="nav navbar-nav navbar-right">
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">設定<span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">プロフィール</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">リスト</a></li>
+            <li><a href="#">ヘルプ</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">設定</a></li>
+            <li><a href="#">ログアウト</a></li>
+          </ul>
+        </li>
+      </ul>
+      <form class="navbar-form navbar-right" role="search">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search">
+        </div>
+        <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search"></span></button>
+      </form>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+
+
 <%= yield %>
 
 </body>
